kube1/simpleservice2.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - name: app-listener-1
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
